[gd_scene load_steps=7 format=2]

[ext_resource path="res://portal.gd" type="Script" id=1]
[ext_resource path="res://portal.shader" type="Shader" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.5, 1.5, 0 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 20, 1, 20 )

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 2 )

[sub_resource type="QuadMesh" id=4]
size = Vector2( 3, 3 )

[node name="portal" type="Spatial"]
script = ExtResource( 1 )

[node name="portal_entry" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
collision_layer = 0
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="portal_entry"]
shape = SubResource( 1 )

[node name="portal_activation" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="portal_activation"]
shape = SubResource( 2 )

[node name="portal_meshes" type="Spatial" parent="."]

[node name="portal_mesh_lv0" type="MeshInstance" parent="portal_meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
layers = 2
material_override = SubResource( 3 )
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = null

[node name="portal_mesh_lv1" type="MeshInstance" parent="portal_meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
layers = 4
material_override = SubResource( 3 )
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = null

[node name="portal_mesh_lv2" type="MeshInstance" parent="portal_meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
layers = 8
material_override = SubResource( 3 )
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = null

[node name="portal_mesh_lv3" type="MeshInstance" parent="portal_meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
layers = 16
material_override = SubResource( 3 )
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = null

[node name="portal_mesh_lv4" type="MeshInstance" parent="portal_meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
layers = 32
material_override = SubResource( 3 )
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = null

[node name="portal_mesh_lv5" type="MeshInstance" parent="portal_meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
layers = 64
material_override = SubResource( 3 )
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = null

[node name="portal_mesh_lv6" type="MeshInstance" parent="portal_meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
layers = 128
material_override = SubResource( 3 )
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = null

[node name="portal_mesh_lv7" type="MeshInstance" parent="portal_meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
layers = 0
material_override = SubResource( 3 )
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = null

[node name="portal_mesh_lv8" type="MeshInstance" parent="portal_meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
layers = 512
material_override = SubResource( 3 )
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = null

[node name="portal_mesh_lv9" type="MeshInstance" parent="portal_meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
layers = 1024
material_override = SubResource( 3 )
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = null

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
aabb = AABB( -1.5, 0, 0, 3, 3, 0 )

[connection signal="body_entered" from="portal_entry" to="." method="_on_portal_entry_body_entered"]
[connection signal="body_entered" from="portal_activation" to="." method="_on_portal_activation_body_entered"]
[connection signal="body_exited" from="portal_activation" to="." method="_on_portal_activation_body_exited"]
[connection signal="camera_entered" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_camera_entered"]
[connection signal="camera_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_camera_exited"]
